# rayleigh

./: .gitignore  CHANGELOG.rst  README.md  SECURITY.md  build.py  dat.tgz  makefile  pyproject.toml
.github/: CODEOWNERS
dat/abi/: rearrange.py
dat/ahi/: rearrange.py
dat/ami/: rearrange.py
dat/fci/: rearrange.py
docs/source/introduction/: index.rst
docs/source/rayleigh_api/: index.rst
docs/source/releases/: index.rst  v1_12_0.rst  v1_12_1.rst
docs/source/releases/1.15.0/: 1.15.0-internal-release.yaml  ami-fci-geocolor-updates.yaml
docs/source/releases/latest/: 4-add-disclaimer-to-readme.yaml
docs/source/userguide/: index.rst
rayleigh/: __init__.py  rayleigh.py
src/: geokompsat_ami_rayleigh_constants.f90  goes16_abi_rayleigh_constants.f90  goes17_abi_rayleigh_constants.f90  himawari8_ahi_rayleigh_constants.f90  makefile  meteosat12_fci_rayleigh_constants.f90  modis_rayleigh_constants.f90  module.mk  process_color.f90  rayleigh.f90  rayleigh.rst  rayleigh_chan_constants.f90  rayleigh_constants.f90  viirs_rayleigh_constants.f90
tests/: test_all.sh
